<resources>
    <string name="app_name">锁屏倒计时</string>

    <string name="pref_t_service_enable">启用服务</string>
    <string name="pref_t_destination_date">目标时间</string>
    <string name="pref_t_paper_source">壁纸来源</string>
    <string name="pref_t_update_lockpaper">在锁屏壁纸上倒计时</string>
    <string name="pref_s_couldnot_set_lockpaper_msg">本系统不支持设置锁屏壁纸</string>
    <string name="pref_t_update_wallpaper">在主屏幕壁纸上倒计时</string>

    <string name="pref_key_service_enable">pref_service_enable</string>
    <string name="pref_key_destination_date">pref_destination_date</string>
    <string name="pref_key_is_update_wallpaper">pref_update_wallpaper</string>
    <string name="pref_keyTag_select_wallpaper">pref_tag_select_wallpaper</string>
    <string name="pref_key_is_update_lockpaper">pref_update_lockpaper</string>
    <string name="pref_keyTag_select_lockpaper">pref_tag_select_lockpaper</string>
    <string name="pref_key_wallpaper_text_param">pref_wallpaper_textparam</string>
    <string name="pref_key_lockpaper_text_param">pref_wallpaper_lockparam</string>

    <string name="msg_service_not_running">服务未开启</string>
    <string name="cancel">Cancel</string>
    <string name="placer__bar_fontbtn_text">字体</string>
</resources>
